--- a/views/nowplaying/index.ejs
+++ b/views/nowplaying/index.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<%- include('../partials/header'); %>
 
   <div class="slideshow"></div>
   <nav class="navbar navbar-default" role="navigation">
@@ -61,4 +61,4 @@
   </div>
 
 
-  <% include ../partials/footer %>
+<%- include('../partials/footer'); %>
