--- a/views/nowplaying/show.ejs
+++ b/views/nowplaying/show.ejs
@@ -1,4 +1,5 @@
-<% include ../partials/header %>
+<%- include('../partials/header'); %>
+
 
   <div>
     <% Movie.backdrop_path = 'https://image.tmdb.org/t/p/original' +Movie.backdrop_path %>
@@ -196,4 +197,4 @@
     </footer>
   </div>
 
-  <% include ../partials/footer %>
+<%- include('../partials/footer'); %>
