--- a/views/popular/show.ejs
+++ b/views/popular/show.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<%- include('../partials/header'); %>
 
   <div>
     <% Movie.backdrop_path = 'https://image.tmdb.org/t/p/original' +Movie.backdrop_path %>
@@ -196,4 +196,4 @@
     </footer>
   </div>
 
-  <% include ../partials/footer %>
+<%- include('../partials/footer'); %>
