--- a/views/toprated/index.ejs
+++ b/views/toprated/index.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<%- include('../partials/header'); %>
 
   <div class="slideshow"></div>
   <nav class="navbar navbar-default" role="navigation">
@@ -60,4 +60,4 @@
       <% }); %>
   </div>
 
-  <% include ../partials/footer %>
+<%- include('../partials/footer'); %>
